--- a/Assets/CSS/custom.css
+++ b/Assets/CSS/custom.css
@@ -35,6 +35,10 @@ body{
     font-family: Nunito-Sans;
 }
 
+h3, h4, h5, h6, p{
+    color: var(--body-text);
+}
+
 
 /* END OF GLOBAL///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
@@ -217,23 +221,35 @@ main{
 
 /* WEB TOPICS COURSES///////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
-.web-topics-box-parent{
-    margin-top: 18vh;
+main h3{
+    font-weight: 700;
+    font-size: 2em;
+    margin-top: 7%;
+    color: var(--body-text);
+}
 
+.web-topics-box-parent{
+    margin-top: 2%;
 }
 
 .web-topics{
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
     column-gap: 2%;
     row-gap:35px ;
 }
 
 .web-topic{
-    width: 18.4%;
+    width: 306.359px; /* 18.4%*/
     background-color: var(--bg_default);
     border-radius: 10px;
     overflow: hidden;
+    flex-shrink: 0;
+}
+
+.web-topic:nth-child(40){ /* to prevent web-topic-divs from getting centered */
+    background-color: transparent;
 }
 
 .thumbnail-div{
@@ -245,42 +261,62 @@ main{
 
 .thumbnail-div img{
     height: 100%;
-    /* width: 100%; */
-    /* object-fit: cover; */
 }
 
-.web-topic:nth-child(5) .thumbnail-div img{ /*Angular Image*/
+/* Start of Custom images////////////////////////////////////////////////////////////////////////////////////////////// */
+
+.web-topic:nth-child(5) .thumbnail-div img{ /* Angular Image */
     height: 100%;
     transform: translateX(-80px);
 }
 
-.web-topic:nth-child(6) .thumbnail-div img{ /*React Image*/
+.web-topic:nth-child(6) .thumbnail-div img{ /* React Image */
     transform: translateX(-8px);
 }
 
-.web-topic:nth-child(7) .thumbnail-div img{ /*Vue Image*/
+.web-topic:nth-child(7) .thumbnail-div img{ /* Vue Image */
     transform: translateX(-15px);
 }
 
-.web-topic:nth-child(10) .thumbnail-div img{ /*Ruby Image*/
+.web-topic:nth-child(10) .thumbnail-div img{ /* Ruby Image */
     width: auto;
     transform: translateX(-83px);
 }
 
-.web-topic:nth-child(13) .thumbnail-div img{ /*SQL Image*/
+.web-topic:nth-child(13) .thumbnail-div img{ /* SQL Image */
     transform: translateX(-28px);
 }
 
-.web-topic:nth-child(15) .thumbnail-div img{ /*REST APIs Image*/
+.web-topic:nth-child(15) .thumbnail-div img{ /* REST APIs Image */
     width: 100%;
     object-fit: cover;
 }
 
-.web-topic:nth-child(20) .thumbnail-div img{ /*Websockets APIs Image*/
+.web-topic:nth-child(20) .thumbnail-div img{ /* Websockets APIs Image */
     width: 100%;
     height: auto;
     transform: translateY(-30px);
 }
+
+.web-topic:nth-child(23) .thumbnail-div img{ /* User Experience (UX) APIs Image */
+    width: 100%;
+    height: auto;
+    transform: translateY(-27px);
+}
+
+.web-topic:nth-child(32) .thumbnail-div img{ /* DevOps Image */
+    width: 100%;
+    height: auto;
+    
+}
+
+.web-topic:nth-child(33) .thumbnail-div img{ /* Cloud Computing Image */
+    width: 100%;
+    height: auto;
+    transform: translateY(-30px);
+}
+
+/* End of Custom Images ////////////////////////////////////////////////////////////////////////////////////////////////*/
 
 .web-topic .container{
     margin-top: 15px;
@@ -295,7 +331,23 @@ main{
 
 .topic-details-div h5{
     font-size: 1.2em;
-    margin: 0 0 30px 0;
+    margin: 0 0 35px 0;
+}
+
+.web-topic:nth-child(28) h5{ /* Custom margin (between h5 and stars) for SEO web-topic div*/
+    margin: 0 0 10px 0;
+}
+
+.web-topic:nth-child(31) h5{ /* Custom margin (between h5 and stars) for Continuous Integration web-topic div*/
+    margin: 0 0 10px 0;
+}
+
+.web-topic:nth-child(37) h5{ /* Custom margin (between h5 and stars) for Web Accessibility Initiative (WAI) web-topic div*/
+    margin: 0 0 10px 0;
+}
+
+.web-topic:nth-child(38) h5{ /* Custom margin (between h5 and stars) for Content Management Systems (CMS) web-topic div*/
+    margin: 0 0 10px 0;
 }
 
 /* default 4-star rating  ///////////////////////////////////////////////////////////////////////////////////////*/
@@ -339,77 +391,131 @@ main{
 
 /*Custom Star rating////////////////////////////////////////////////////////////////////////////////////////*/
 
-.web-topic:nth-child(2) .star-color-fill{ /* CSS star rating*/
-    width: 20px;
-    height: 20px;
+.web-topic:nth-child(2) .star-border:nth-child(4) .star-color-fill{ /* CSS star rating*/
+    width: 25px;
+    height: 25px;
     position: absolute;
-    top: 3px;
+    top: -3px;
     left: 9px;
     background-color: var(--bg_default);
 }
 
-.web-topic:nth-child(5) .star-color-fill{ /* Angular star rating*/
-    width: 20px;
-    height: 20px;
+.web-topic:nth-child(5) .star-border:nth-child(4) .star-color-fill{ /* Angular star rating*/
+    width: 25px;
+    height: 25px;
     position: absolute;
-    top: 3px;
+    top: -3px;
     left: 10px;
     background-color: var(--bg_default);
 }
 
 
 .web-topic:nth-child(7) .star-border:nth-child(4) .star-color-fill{ /* Vue star rating*/
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     position: absolute;
-    top: 3px;
+    top: -3px;
     left: 9px;
     background-color: var(--bg_default);
 }
 
 
 .web-topic:nth-child(13) .star-color-fill{ /* SQL star rating*/
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     position: absolute;
-    top: 3px;
+    top: -3px;
     left: 6px;
     background-color: var(--bg_default);
 }
 
 .web-topic:nth-child(14) .star-color-fill{ /* NoSQL star rating*/
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     position: absolute;
-    top: 3px;
+    top: -3px;
     left: 6px;
     background-color: var(--bg_default);
 }
 
 .web-topic:nth-child(15) .star-color-fill{ /* REST APIs star rating*/
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     position: absolute;
-    top: 3px;
+    top: -3px;
     left: 3px;
     background-color: var(--bg_default);
 }
 
 .web-topic:nth-child(17) .star-border:nth-child(4) .star-color-fill{ /* OAuth star rating*/
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     position: absolute;
-    top: 3px;
+    top: -3px;
     left: 8px;
     background-color: var(--bg_default);
 }
 
 .web-topic:nth-child(18) .star-border:nth-child(4) .star-color-fill{ /* JSON star rating*/
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     position: absolute;
-    top: 3px;
+    top: -3px;
     left: 8px;
+    background-color: var(--bg_default);
+}
+
+.web-topic:nth-child(26) .star-border:nth-child(4) .star-color-fill{ /* Performance Optimization star rating*/
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: -3px;
+    left: 6px;
+    background-color: var(--bg_default);
+}
+
+.web-topic:nth-child(27) .star-color-fill{ /* Cross-Browser Compatibility star rating*/
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: -3px;
+    left: 6px;
+    background-color: var(--bg_default);
+}
+
+.web-topic:nth-child(30) .star-color-fill{ /* Testing and Debugging star rating*/
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: -3px;
+    left: 6px;
+    background-color: var(--bg_default);
+}
+
+.web-topic:nth-child(32) .star-color-fill{ /* DevOps star rating*/
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: -3px;
+    left: 3px;
+    background-color: var(--bg_default);
+}
+
+.web-topic:nth-child(33) .star-color-fill{ /* Cloud Computing star rating */
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: -3px;
+    left: 5px;
+    background-color: var(--bg_default);
+}
+
+.web-topic:nth-child(37) .star-border:nth-child(4) .star-color-fill{ /* Web Accessibility Initiative (WAI) star rating*/
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: -3px;
+    left: 9px;
     background-color: var(--bg_default);
 }
 
