--- a/Assets/CSS/custom.css
+++ b/Assets/CSS/custom.css
@@ -56,7 +56,6 @@ h3, h4, h5, h6, p{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row;
 }
 
 .page-title h1{
@@ -151,7 +150,6 @@ main{
     width: 100%;
     display: flex;
     align-items: center;
-    flex-direction: row;
     border-radius: 15px;
     background-color: white;
     position: absolute;
@@ -183,7 +181,6 @@ main{
 .search-div span:nth-child(1){
     width: 3%;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     background-color: transparent;
 }
@@ -194,7 +191,6 @@ main{
 
 .search-options{
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     width: 10%;
     padding: 0 0 0 13px;
@@ -227,15 +223,18 @@ main{
 
 /* WEB TOPICS COURSES///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
-main h3{
+.web-topic h3{
+    width: max-content;
     font-weight: 700;
     font-size: 2em;
-    margin-top: 7%;
     color: var(--body-text);
+    position: absolute;
+    top: -7vh;
+    left: 0;
 }
 
 .web-topics-box-parent{
-    margin-top: 2%;
+    margin-top: 10%;
 }
 
 .web-topics{
@@ -250,8 +249,9 @@ main h3{
     width: 306.359px; /* 18.4%*/
     background-color: var(--bg_default);
     border-radius: 10px;
-    overflow: hidden;
+    /* overflow: hidden; */
     flex-shrink: 0;
+    position: relative;
 }
 
 .web-topic:nth-child(40){ /* to prevent web-topic-divs from getting centered */
