--- a/Assets/CSS/dark-theme-details-page.css
+++ b/Assets/CSS/dark-theme-details-page.css
@@ -1,4 +1,4 @@
-/* GLOBAL //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/* GLOBAL/////////////////////////////////////////////////////////////////// */
 
 *{
     margin: 0;
@@ -14,10 +14,10 @@
 :root{
     --brand-primary:#0768AC;
     --brand-secondary: #03C180;
-    --bg_default:#FFFFFF;
-    --bg_body:#F0F9FF;
-    --lines-color:	#DDDDDD;
-    --body-text:#333333;
+    --bg_default:#1A1A1A;
+    --bg_body:#282828;
+    --lines-color:#000000;
+    --body-text:#EDEDED;
     --heart-color:#DC143C;
 }
 
@@ -28,7 +28,7 @@
 
 body{
     font-family: Nunito-Sans;
-    background-color: var(--bg_body);
+    background-color: var( --bg_default);
     transition: all ease-in 0.5s;
 }
 
@@ -48,8 +48,7 @@ h3, h4, h5, h6, p{
 
 /* custom styles for Javascript to use////////////////////////////////////////////////////////////// */
 
-
-/* END OF GLOBAL///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+/* END OF GLOBAL/////////////////////////////////////////////////////////// */
 
 /* HEADER//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
@@ -77,10 +76,11 @@ header{
     font-family: Nunito-Sans;
     font-size: 0.9rem;
     background-color: transparent;
-    border: 1px solid var(--lines-color);
+    border: 1px solid #DDDDDD;
     padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
+    color: var(--body-text);
 }
 
 .mode-icon{
@@ -88,9 +88,9 @@ header{
 }
 
 #dark-mode-label:hover{
-    background-color: black;
+    background-color: var(--body-text);
     color: var(--bg_default);
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 
@@ -141,6 +141,7 @@ header{
     margin: auto;
     transform: translateY(-15px);
     line-height: 1.2;
+
 }
 
 .banner-message h2{
@@ -153,6 +154,8 @@ header{
     font-size: 1.01em;
     font-weight: 300;
 }
+
+/* END OF BANNER////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 /* SEARCH BAR/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
@@ -254,6 +257,7 @@ main{
 
 .web-topics-box-parent{
     margin-top: 10px;
+    padding-bottom: 4px;
 }
 
 .web-topics{
@@ -313,7 +317,6 @@ main{
     margin-bottom: 10px;
 }
 
-
 /* default 4-star rating  ///////////////////////////////////////////////////////////////////////////////////////*/
 
 .star-rating-box{
@@ -347,149 +350,165 @@ main{
     position: absolute;
     top: 0px;
     left: 0px;
-    background-color: var(--bg_default);
+    background-color: var(--bg_body);
 }
 
 /* end of default 4-star rating  ///////////////////////////////////////////////////////////////////////////*/
-
-
-/*Custom Star rating////////////////////////////////////////////////////////////////////////////////////////*/
-
-.web-topic-card:nth-child(2) .star-border:nth-child(4) .star-color-fill{ /* CSS star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 9px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(5) .star-border:nth-child(4) .star-color-fill{ /* Angular star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 10px;
-    background-color: var(--bg_default);
-}
-
-
-.web-topic-card:nth-child(7) .star-border:nth-child(4) .star-color-fill{ /* Vue star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 9px;
-    background-color: var(--bg_default);
-}
-
-
-.web-topic-card:nth-child(13) .star-color-fill{ /* SQL star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 6px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(14) .star-color-fill{ /* NoSQL star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 6px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(15) .star-color-fill{ /* REST APIs star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 3px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(17) .star-border:nth-child(4) .star-color-fill{ /* OAuth star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 8px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(18) .star-border:nth-child(4) .star-color-fill{ /* JSON star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 8px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(26) .star-border:nth-child(4) .star-color-fill{ /* Performance Optimization star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 3px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(27) .star-color-fill{ /* Cross-Browser Compatibility star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 5px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(30) .star-color-fill{ /* Testing and Debugging star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 6px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(32) .star-color-fill { /* DevOps star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 3px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(33) .star-color-fill, 
-.star-color-fill-favourites{ /* Cloud Computing star rating */
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 5px;
-    background-color: var(--bg_default);
-}
-
-.web-topic-card:nth-child(37) .star-border:nth-child(4) .star-color-fill{ /* Web Accessibility Initiative (WAI) star rating*/
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: -3px;
-    left: 9px;
-    background-color: var(--bg_default);
-}
-
-/* End of custom Star rating////////////////////////////////////////////////////////////////////////////////////////*/
 
 .card-details p{
     font-size: .8rem;
     color: gray;
     margin-bottom: 15px;
+}
+
+/* details page style///////////////////////////////////////////////////////////////////////////// */
+
+.details-page{
+    width: 100%;
+    transition: all ease-in .5s;
+    margin-right: -100%;
+    opacity: 0;
+    height: fit-content;
+}
+
+.course-details-box{
+    background-color: var(--bg_body);
+    position: relative;
+}
+
+.details-page-container{
+    padding:0 43.5% 0 19.29%;
+}
+
+.course-details{
+    padding: 30px 0;
+}
+
+.course-details h4{
+    color: var(--brand-secondary);
+    font-weight: 400;
+}
+
+.course-details h5{
+    /* color: var(--body-text); */
+    font-size: 1.5rem;
+}
+
+.course-details .star-rating-box{
+    margin-bottom: 20px;
+}
+
+.details-page-container p{
+    /* color: var(--body-text); */
+    font-size:1.01rem;
+}
+
+/* course card ////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+.details-page-card{
+    background-color:var(--body-text);
+    width: 320px;
+    position: absolute;
+    top: 30px;  
+    right:277px;
+    padding: 2px;
+    box-shadow: 0px 0px 1px 0px rgb(0, 0, 0);
+}
+
+.details-page-card-thumbnail{
+    width: 100%;
+    height: 200px;
+}
+
+.details-page-card-thumbnail img{
+    width: 100%;
+    height: 100%;
+    object-fit:cover;
+}
+
+.details-page-card-custom-container{
+    padding-bottom: 4.5%;
+}
+
+.details-page-card-custom-container h4{
+    padding: 20px 0 11px 0 ;
+    color: var(--lines-color);
+}
+
+.details-page-card-custom-container h4 span{
+    color: var(--lines-color);
+}
+
+.details-page-card-custom-container h4 a{
+    color: var(--brand-primary);
+}
+
+.add-to-favourites-box{
+    padding: 20px 20px 10px 20px;
+    /* margin-bottom: 15px; */
+    border: 1px solid gray;
+}
+
+.add-to-favourites-box button{
+    margin: 10px 0;
+    width: 100%;
+    padding:3px 0 17px 0;
+    background-color: var(--brand-secondary);
+    color:var(--body-text);
+    border: 0;
+    font-size: 1.25rem;
+    text-align: center;
+    box-shadow: 0px 0px 1px 0px rgb(0, 0, 0);
+    cursor: pointer;
+}
+
+.details-page-heart{
+    transform: translateY(10px);
+    padding-left: 8px;
+    font-size: 2rem;
+}
+
+.add-to-favourites-box h6{
+    color: gray;
+    font-size: .8rem;
+    text-align: center;
+    font-weight: 400;
+}
+
+/* course sub topics///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+.course-sub-topics{
+    border: 1px solid var(--lines-color);
+    border-radius: 5px;
+    background-color: var(--bg_body);
+    margin-top: 30px;
+}
+
+.course-sub-topic{
+    display: flex;
+    border-bottom: 1px solid var(--lines-color);
+}
+
+.course-sub-topic:nth-child(7){
+    /* border-bottom: 1px solid var(--lines-color); */
+    border: 0;
+}
+
+.details-page-container .course-sub-topics .course-sub-topic h2{
+    padding: 15px 0 15px 30px;
+    color: var(--body-text);
+}
+
+.details-page-container .course-sub-topics .course-sub-topic p {
+    padding: 15px 0 15px 0;
+    color: var(--body-text);
+    font-size: 1rem;
+}
+
+.course-sub-topic span{
+    font-size: 1.5rem;
+    padding: 15px 15px 0 30px;
+    color: var(--brand-secondary);
 }
 
 /* FAVOURITES ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
