--- a/Assets/CSS/dark-theme-main-page.css
+++ b/Assets/CSS/dark-theme-main-page.css
@@ -14,10 +14,10 @@
 :root{
     --brand-primary:#0768AC;
     --brand-secondary: #03C180;
-    --bg_default:#FFFFFF;
-    --bg_body:#F0F9FF;
-    --lines-color:	#DDDDDD;
-    --body-text:#333333;
+    --bg_default:#1A1A1A;
+    --bg_body:#282828;
+    --lines-color:#000000;
+    --body-text:#EDEDED;
     --heart-color:#DC143C;
 }
 
@@ -77,10 +77,11 @@ header{
     font-family: Nunito-Sans;
     font-size: 0.9rem;
     background-color: transparent;
-    border: 1px solid var(--lines-color);
+    border: 1px solid #DDDDDD;
     padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
+    color: var(--body-text);
 }
 
 .mode-icon{
@@ -88,9 +89,9 @@ header{
 }
 
 #dark-mode-label:hover{
-    background-color: black;
+    background-color: var(--body-text);
     color: var(--bg_default);
-    border: 1px solid black;
+    border: 1px solid var(--body-text);
 }
 
 
@@ -141,6 +142,7 @@ header{
     margin: auto;
     transform: translateY(-15px);
     line-height: 1.2;
+ 
 }
 
 .banner-message h2{
@@ -254,6 +256,7 @@ main{
 
 .web-topics-box-parent{
     margin-top: 10px;
+    padding-bottom: 4px;
 }
 
 .web-topics{
