--- a/Assets/CSS/custom.css
+++ b/Assets/CSS/custom.css
@@ -22,8 +22,7 @@
 }
 
 .container{
-    padding-inline:4%; /*58px*/
-    /* overflow: hidden; */
+    padding-inline:4%;
 }
 
 body{
@@ -98,12 +97,6 @@ header{
     display: none;
 }
 
-/* .modes-buttons:has(> input:checked){
-    background-color: #000;
-    color: #fff;
-} */
-
-
 /* BANNER SECTION/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 .banner-section{
@@ -174,13 +167,13 @@ header{
     border-radius: 10px;
     background-color: var(--bg_default);
     box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.23);
-    overflow: hidden;
+    position: relative;
 }
 
 .search-field{
     width: 94%;
     background-color: transparent;
-    padding: 12.9px 0; 
+    padding: 12.9px 0 12.9px 40px; 
     border: 0;
 }
 
@@ -188,7 +181,7 @@ header{
 .search-field:placeholder-shown{
     font-family: Nunito-Sans;
     font-size: 1em;
-    padding-left: 10px;
+    padding-left: 40px;
 }
 
 
@@ -199,7 +192,9 @@ header{
 }
 
 .search-bar span:nth-child(1){
-    padding:15px 3px 0 11px;
+    position: absolute;
+    top: 15px;
+    left: 11px; 
 }
 
 .search-icon{
@@ -212,6 +207,7 @@ header{
     width: 18%;
     padding: 0 0 0 13px;
     border-left: 2px solid var(--lines-color);
+    cursor: pointer;
 }
 
 .search-options p:nth-child(1){
@@ -283,6 +279,7 @@ main{
     width: 100%;
     height: 134.047px;
     object-fit: cover;
+    background-color: var(--bg_default);
 }
 
 
