--- a/Assets/CSS/details-page.css
+++ b/Assets/CSS/details-page.css
@@ -8,15 +8,16 @@
 
 .course-details-box{
     background-color: var(--body-text);
-    position: relative;
 }
 
-.details-page-container{
-    padding:0 43.5% 0 19.29%;
+.course-details-box-container{
+    display: flex;
+    padding: 0 0 0 17.29%;
 }
 
 .course-details{
-    padding: 30px 0;
+    width: 50%;
+    padding: 30px;
 }
 
 .course-details h4{
@@ -37,19 +38,29 @@
     margin-bottom: 20px;
 }
 
-.details-page-container p{
+.course-details p{
     color: var(--bg_default);
-    font-size:1.01rem;
+    font-size: 1.01rem;
+}
+
+.add-to-favourites-box p{
+    color: black;
 }
 
 /* course card ////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+.details-page-card-contianer{
+    margin-top: 30px;
+    position: relative;
+    width: 320px;
+}
 
 .details-page-card{
     background-color:var(--bg_default);
     width: 320px;
     position: absolute;
-    top: 30px;  
-    right:277px;
+    top: 0;
+    left: 0;
     padding: 2px;
     box-shadow: 0px 0px 1px 0px rgb(0, 0, 0);
 }
@@ -79,7 +90,6 @@
 
 .add-to-favourites-box{
     padding: 20px 20px 10px 20px;
-    /* margin-bottom: 15px; */
     border: 1px solid var( --lines-color);
 }
 
@@ -110,6 +120,10 @@
 
 /* course sub topics///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
+.details-page-sub-topics-container{
+    padding:0 43.5% 0 19.29%;
+}
+
 .course-sub-topics{
     border: 1px solid var(--lines-color);
     border-radius: 5px;
@@ -122,20 +136,17 @@
     border-bottom: 1px solid var(--lines-color);
 }
 
-
-
-.course-sub-topic:nth-child(7){
-    /* border-bottom: 1px solid var(--lines-color); */
+.course-sub-topic:last-child{
     border: 0;
 }
 
-.details-page-container .course-sub-topics .course-sub-topic h2{
+.course-sub-topic h2{
     padding: 15px 0 15px 30px;
     color: var(--body-text);
 }
 
-.details-page-container .course-sub-topics .course-sub-topic p {
-    padding: 15px 0 15px 0;
+.course-sub-topic p {
+    padding: 15px 5px 15px 0;
     color: var(--body-text);
     font-size: 1rem;
 }
