--- a/Assets/CSS/responsive.css
+++ b/Assets/CSS/responsive.css
@@ -52,13 +52,13 @@
     }
     
     .search-field{
-        width: 89%;
-        padding: 15px 0 15px ; 
+        width: 100%;
+        padding: 15px 0 15px 40px; 
     }
 
     .search-field:placeholder-shown{
         font-size: 1rem;
-        padding-left: 8px;
+        /* padding-left: 40px; */
     }
 
     .search-field:focus{
@@ -168,13 +168,47 @@
         font-size: .75em;
     }
 
-    .details-page{
-        width: 100%;
-        transition: all ease-in .5s;
-        margin-right: -100%;
-        /* transform: translateX(100%); */
-        /* opacity: 0; */
+    /* DETAILS PAGE///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+    /* course details section////////////////////////////////////////////////////////////////////////////////////////// */
+
+    .course-details-box-container{
+        display: block;
+        padding: 0;
     }
+    
+    .course-details{
+        padding: 15px;
+        width: 100%;
+    }
+    
+    /* course sub topics///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+    .details-page-sub-topics-container{
+        padding: 0 15px;
+    }
+
+    .course-sub-topic h2{
+        padding: 15px 0 15px 30px;
+        color: var(--body-text);
+    }
+    
+    .course-sub-topic p {
+        padding-right: 5px;
+    }
+
+    /* details page's card///////////////////////////////////////////////////////////////////////////////////////////////// */
+    
+    .details-page-card-contianer{
+        position: unset;
+        margin: auto;
+        padding: 30px 0 15px 0
+    }
+
+    .details-page-card{
+        position: unset;
+    }
+
 
 }
 @media(min-width: 768px) and (max-width: 799px){
@@ -199,7 +233,7 @@
     /* SEARCH BAR//////////////////////////////////////////////////////////////////////////////////////////////////// */
 
     .search-field{
-        width: 56%;
+        width: 60%;
     }
 
     .search-options{
@@ -216,7 +250,44 @@
         grid-template-columns: 31.04% 31.04% 31.04%;
         column-gap: 3.35%;
     }
+
+    /* DETAILS PAGE//////////////////////////////////////////////////////////////////////////////////////////////// */
+
+    /* course details section////////////////////////////////////////////////////////////////////////////////////////// */
+    .course-details-box-container{
+        padding: 0;
+    }
+
+    .course-details{
+        padding: 20px;
+        width: 56%;
+    }
+
+    /* details page's card///////////////////////////////////////////////////////////////////////////////////////////////// */
+    
+    .details-page-card-contianer{
+        position: unset;
+        margin: 0;
+        padding: 15px;
+    }
+
+    .details-page-card{
+    position: unset;
+    }
+
+    /* course sub topics///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+    .details-page-sub-topics-container{
+        padding: 0;
+        margin: auto;
+        width: 70%;
+    }
+    
+    .course-sub-topic p {
+        padding-right: 5px;
+    }
 }
+
 @media(min-width: 800px) and (max-width: 911px){
     /* BANNER SECTION/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
@@ -256,7 +327,44 @@
         grid-template-columns: 31.04% 31.04% 31.04%;
         column-gap: 3.35%;
     }
+
+    /* DETAILS PAGE//////////////////////////////////////////////////////////////////////////////////////////////// */
+
+    /* course details section////////////////////////////////////////////////////////////////////////////////////////// */
+    .course-details-box-container{
+        padding: 0;
+    }
+
+    .course-details{
+        padding: 30px;
+        width: 56%;
+    }
+
+    /* details page's card///////////////////////////////////////////////////////////////////////////////////////////////// */
+    
+    .details-page-card-contianer{
+        position: unset;
+        margin: 0;
+        padding: 15px;
+    }
+
+    .details-page-card{
+    position: unset;
+    }
+
+    /* course sub topics///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+    .details-page-sub-topics-container{
+        padding: 0;
+        margin: auto;
+        width: 70%;
+    }
+    
+    .course-sub-topic p {
+        padding-right: 5px;
+    }
 }
+
 @media(min-width: 912px) and (max-width: 1023px){
     /* BANNER SECTION/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
@@ -296,7 +404,44 @@
         grid-template-columns: minmax(31.043%, 33.333%) minmax(31.043%, 33.333%) minmax(31.043%, 33.333%);
         column-gap: 2.29%;
     }
+
+    /* DETAILS PAGE//////////////////////////////////////////////////////////////////////////////////////////////// */
+
+    /* course details section////////////////////////////////////////////////////////////////////////////////////////// */
+    .course-details-box-container{
+        padding: 0;
+    }
+
+    .course-details{
+        padding: 30px;
+        width: 56%;
+    }
+
+    /* details page's card///////////////////////////////////////////////////////////////////////////////////////////////// */
+    
+    .details-page-card-contianer{
+        position: unset;
+        margin: auto;
+        padding: 15px;
+    }
+
+    .details-page-card{
+        position: unset;
+    }
+
+    /* course sub topics///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+    .details-page-sub-topics-container{
+        padding: 0;
+        margin: auto;
+        width: 70%;
+    }
+    
+    .course-sub-topic p {
+        padding-right: 5px;
+    }
 }
+
 @media(min-width: 1024px) and (max-width: 1279px){
     /* BANNER SECTION/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
@@ -335,6 +480,30 @@
     .web-topics{
         grid-template-columns: minmax(22.71%, 25%) minmax(22.71%, 25%) minmax(22.71%, 25%) minmax(22.71%, 25%);
         column-gap: 2.29%;
+    }
+
+    /* DETAILS PAGE//////////////////////////////////////////////////////////////////////////////////////////////// */
+
+    /* course details section////////////////////////////////////////////////////////////////////////////////////////// */
+    .course-details-box-container{
+        padding: 0;
+    }
+
+    .course-details{
+        padding: 30px;
+        width: 56%;
+    }
+
+    /* course sub topics///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+    .details-page-sub-topics-container{
+        padding:0 0 0 30px;
+        margin-right: auto;
+        width: 53%;
+    }
+    
+    .course-sub-topic p {
+        padding-right: 5px;
     }
 }
 @media(min-width: 1280px) and (max-width:1439px){
