--- a/Assets/CSS/custom.css
+++ b/Assets/CSS/custom.css
@@ -53,8 +53,19 @@ h3, h4, h5, h6, p{
 /* HEADER//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 header{
-    box-shadow: inset 0px 0px 2px 0px rgb(0, 0, 0);
     background-color: var(--bg_default);
+    height: 70px;
+    position: relative;
+}
+
+.header-container{
+    box-shadow: 0px 0px 5px 0px rgb(0, 0, 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 9999;
 }
 
 .page-modes{
@@ -205,27 +216,24 @@ header{
     display: flex;
     flex-wrap: wrap;
     width: 18%;
-    padding: 0 0 0 13px;
-    border-left: 2px solid var(--lines-color);
+    border-left: 1px solid var(--lines-color);
     cursor: pointer;
+    padding: 0 10px;
 }
 
-.search-options p:nth-child(1){
+.search-options label{
     width: 100%;
     font-size: 0.7em;
-    line-height: 1.6;
-    padding: 5px 0 0 2px;
+    padding: 0 0 0 5px;
+    transform: translateY(6px);
 }
 
-.search-options p:nth-child(2){
-    width: 87%;
+.search-options select{
+    width: 100%;
     font-size: .9rem;
-    line-height: 1.17;
-}
-
-.search-down-arrow{
-    font-size: .8rem;
-    padding-bottom:1px;
+    border: 1px;
+    border-radius: 10px;
+    transform: translateY(-5px);
 }
 
 /* WEB TOPICS COURSES///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
@@ -287,8 +295,7 @@ main{
 
 
 .card-custom-container{
-    margin-top: 11px;
-    padding-inline: 6%;
+    padding: 15px;
 }
 
 .card-details h4{
@@ -487,7 +494,7 @@ main{
 .card-details p{
     font-size: .8rem;
     color: gray;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
 }
 
 /* FAVOURITES ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
