--- a/Assets/CSS/custom.css
+++ b/Assets/CSS/custom.css
@@ -21,6 +21,16 @@
     --heart-color:#DC143C;
 }
 
+.dark-theme{
+    --brand-primary:#0768AC;
+    --brand-secondary: #03C180;
+    --bg_default:#1A1A1A;
+    --bg_body:#282828;
+    --lines-color:#000000;
+    --body-text:#EDEDED;
+    --heart-color:#DC143C;
+}
+
 .container{
     padding-inline:4%;
 }
@@ -59,7 +69,7 @@ header{
 }
 
 .header-container{
-    box-shadow: 0px 0px 5px 0px rgb(0, 0, 0);
+    box-shadow: 0px 0px 5px -1px rgb(0, 0, 0);
     position: absolute;
     top: 0;
     left: 0;
@@ -177,7 +187,7 @@ header{
     display: flex;
     border-radius: 10px;
     background-color: var(--bg_default);
-    box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.23);
+    box-shadow: 0px 0px 9px -4px rgba(0,0,0,0.23);
     position: relative;
 }
 
@@ -271,7 +281,7 @@ main{
 .web-topic-card{
     background-color: var(--bg_default);
     border-radius: 10px;
-    box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.23);
+    box-shadow: 0px 0px 5px -3px rgba(0,0,0,0.23);
     cursor: pointer;
 }
 
