--- a/Assets/CSS/dark-theme-main-page.css
+++ b/Assets/CSS/dark-theme-main-page.css
@@ -53,7 +53,7 @@ h3, h4, h5, h6, p{
 /* HEADER//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 
 header{
-    box-shadow: inset 0px 0px 2px 0px rgb(0, 0, 0);
+    box-shadow: 0px 0px 5px -1px rgb(0, 0, 0);
     background-color: var(--bg_default);
 }
 
@@ -212,7 +212,7 @@ header{
     display: flex;
     flex-wrap: wrap;
     width: 18%;
-    border-left: 2px solid var(--lines-color);
+    border-left: 1px solid var(--lines-color);
     cursor: pointer;
     padding: 0 10px;
 }
