--- a/Assets/CSS/details-page.css
+++ b/Assets/CSS/details-page.css
@@ -138,6 +138,8 @@
 .course-sub-topic{
     display: flex;
     border-bottom: 1px solid var(--lines-color);
+    padding: 15px 5px 15px 30px;
+    column-gap: 3%;
 }
 
 .course-sub-topic:last-child{
@@ -145,19 +147,20 @@
 }
 
 .course-sub-topic h2{
-    padding: 15px 0 15px 30px;
     color: var(--body-text);
+
 }
 
-.course-sub-topic p {
-    padding: 15px 5px 15px 0;
+.course-sub-topic h3 {
     color: var(--body-text);
     font-size: 1rem;
+    width: 95%;
+    font-weight: 400;
 }
 
-.course-sub-topic span{
+.course-sub-topic .checkmark{
     font-size: 1.5rem;
-    padding: 15px 15px 0 30px;
     color: var(--brand-secondary);
+    width: 5%;
 }
 
